Lots of minor updates to AlgAnal chapter

--- a/Exercises/AlgAnal/AlgAnlsMCQalgdfn.html
+++ b/Exercises/AlgAnal/AlgAnlsMCQalgdfn.html
@@ -17,6 +17,13 @@
 	<li><var>"A program"<var></li>
 	<li><var>"A mapping from input to output"</var></li>
       </ul>
+      <div class="hints">
+        <p>An algorithm is implemented using a program, but it is not
+          a program.</p>
+	<p>A problem is a mapping from input to output.</p>
+        <p>While informal, the term "recipe" captures the essence of what an
+          algorithm is.</p>
+      </div>
     </div> 
   </div>
 </div>
