--- a/Exercises/AlgAnal/AlgAnlsMCQbest1.html
+++ b/Exercises/AlgAnal/AlgAnlsMCQbest1.html
@@ -20,6 +20,11 @@
 	<li><var><code>O(\log n)</code></var></li>
 	<li><var><code>O(1)</code></var></li>
       </ul>
+      <div class="hints">
+        <p>The simplifying rules tell us that we can drop constants
+          and lower order terms from a polynomial that defines the
+          growth rate.</p>
+      </div>
     </div> 
   </div>
 </div>
