--- a/Exercises/AlgAnal/AlgAnlsMCQbest2.html
+++ b/Exercises/AlgAnal/AlgAnlsMCQbest2.html
@@ -19,6 +19,13 @@
 	<li><var><code>O(\log n)</code></var></li>
 	<li><var><code>O(1)</code></var></li>
       </ul>
+      <div class="hints">
+        <p>The simplifying rules tell us that we can drop constants
+          and lower order terms from a polynomial that defines the
+          growth rate.</p>
+        <p>If you don't see a tight upper bound, pick the smallest
+          bound that is larger.</p>
+      </div>
     </div> 
   </div>
 </div>
