--- a/Exercises/AlgAnal/AlgAnlsMCQrelalgprb.html
+++ b/Exercises/AlgAnal/AlgAnlsMCQrelalgprb.html
@@ -19,6 +19,11 @@
 	<li><var>"An algorithm is another term for a problem."</var></li>
 	<li><var>"A problem is a recipe, and an algorithm is a solution to a problem."</var></li>
       </ul>
+      <div class="hints">
+        <p>A problem is a mapping from inputs to outputs.</p>
+        <p>An algorithm is a recipe.</p>
+        <p>There are many algorithms that can solve a given problem.</p>
+      </div>
     </div> 
   </div>
 </div>
