--- a/Exercises/AlgAnal/AlgAnlsMCQsqlsrch.html
+++ b/Exercises/AlgAnal/AlgAnlsMCQsqlsrch.html
@@ -18,6 +18,18 @@
 	<li><var>"The algorithm is implemented efficiently."</var></li>
 	<li><var>"The search key is small."</var></li>
       </ul>
+      <div class="hints">
+        <p>It is a serious misunderstanding of algorithm analysis to
+          think that best case is related to input size. The array
+          being small has nothing to do with what is the best case
+          input (of a given size).</p>
+        <p>Implementation of an algorithm (as a program) has nothing
+          to do with the algorithm's best case.</p>
+        <p>Since sequential search can be used on an unsorted array,
+          the value for the search key (large or small) might have
+          nothing to do with where the record with that key will be in
+          the array.</p>
+      </div>
     </div> 
   </div>
 </div>
