--- a/Exercises/AlgAnal/AlgAnlsTFbgthta.html
+++ b/Exercises/AlgAnal/AlgAnlsTFbgthta.html
@@ -20,6 +20,10 @@
 	<li><var>"False"</var></li>			  	  	 
       </ul>
       <div class="hints">
+        <p>An equivalence relation is a relation that is reflexive,
+          symmetric, and transitive.</p>
+        <p>Big-Theta notation is like <code>=</code>.</p>
+        <p><code>=</code> is an equivalence relation.</p>
       </div>
     </div>
   </div>
