--- a/Exercises/AlgAnal/AnalProgramMCQtheta.html
+++ b/Exercises/AlgAnal/AnalProgramMCQtheta.html
@@ -31,6 +31,7 @@
 	<li><var><code>\Theta(2^n)</code></var></li>			  	  	 
       </ul>
       <div class="hints">
+        <p>Does any line of code get executed more than once?</p>
       </div>
     </div>
   </div>
