--- a/Exercises/AlgAnal/AnalProgramMCQtheta3.html
+++ b/Exercises/AlgAnal/AnalProgramMCQtheta3.html
@@ -32,6 +32,9 @@
 	<li><var><code>\Theta(2^n)</code></var></li>			  	  	 
       </ul>
       <div class="hints">
+        <p>How much work is done by the body of the inner for loop?</p>
+        <p>How many times is the for loop executed? Multiply
+	  this by the amount of work done by the body.</p>
       </div>
     </div>
   </div>
