--- a/Exercises/AlgAnal/AnlsIntroFIBgrthfn10n.html
+++ b/Exercises/AlgAnal/AnlsIntroFIBgrthfn10n.html
@@ -36,6 +36,9 @@ function checkAnswer(answer) {
         </div>
       </div>
       <div class="hints">
+        <p>Since <code>10n</code> grows slower than the other
+          functions, it is going to be relatively faster for bigger
+          input sizes.</p>
       </div> 
   </div>
 </div>
