--- a/Exercises/AlgAnal/AnlsIntroFIBgrthfn2n.html
+++ b/Exercises/AlgAnal/AnlsIntroFIBgrthfn2n.html
@@ -36,6 +36,9 @@ function checkAnswer(answer) {
         </div>
       </div>
       <div class="hints">
+        <p>Since <code>2^n</code> is a relatively fast growing
+          function, it can only be fastest for relatively small values
+          of <code>n</code>.</p>
       </div> 
   </div>
 </div>
