--- a/Exercises/AlgAnal/AnlsIntroFIBgrthfnnfact.html
+++ b/Exercises/AlgAnal/AnlsIntroFIBgrthfnnfact.html
@@ -36,6 +36,11 @@ function checkAnswer(answer) {
         </div>
       </div>
       <div class="hints">
+        <p><code>n!</code> is an extremely fast growing function.</p>
+        <p>But, compared to the other functions on this list, its
+          constant factor (it is 1) is very small.</p>
+        <p>So for very small values of <code>n</code>, it can be
+          fastest.</p>
       </div> 
   </div>
 </div>
