--- a/Exercises/AlgAnal/AnlsIntroMCQtmcmplx.html
+++ b/Exercises/AlgAnal/AnlsIntroMCQtmcmplx.html
@@ -30,6 +30,19 @@
 	<li><var><code>64n</code></var></li>
       </ul>
       <div class="hints">
+        <p>This problem has an exponential growth rate. The behavior
+          of an exponential growth rate is different from a polynomial
+          growth rate.</p>
+        <p>With a polynomial growth rate, a faster computer leads to a
+          new problem size that is bigger by some factor multiplied by
+          the original problem size that can done in the same amount
+          of time.</p>
+        <p>But with an exponential growth rate, we only get an
+          additive improvement.</p>
+        <p>Regardless of the value of <code>t</code>, the machine that
+          is 64 times faster can only do a problem size that is 6
+          larger in the same amount of time
+          (because <code>\log 64 = 6</code>).</p>
       </div> 
     </div>
   </div>
