--- a/Exercises/AlgAnal/AnalProgramMCQtheta6.html
+++ b/Exercises/AlgAnal/AnalProgramMCQtheta6.html
@@ -33,6 +33,11 @@
 	<li><var><code>\Theta(2^n)</code></var></li>			  	  	 
       </ul>
       <div class="hints">
+        <p>How much work is done by the body of the inner for loop?</p>
+        <p>How many times is the inner for loop executed? Multiply
+	  this by the amount of work done by the body.</p>
+        <p>How many times is the outer for loop executed? Multiply
+	  this by the amount of work done by the inner for loop.</p>
       </div>
     </div>
   </div>
