--- a/Exercises/AlgAnal/AnalProgramMCQtheta9.html
+++ b/Exercises/AlgAnal/AnalProgramMCQtheta9.html
@@ -36,6 +36,8 @@
 	<li><var><code>\Theta(2^n)</code></var></li>			  	  	 
       </ul>
       <div class="hints">
+        <p>How much work is done by each branch of the if-then-else
+          statement? Use the more expensive one.</p>
       </div>
     </div>
   </div>
