--- a/AV/Development/SelfOrgMove-to-FrontPro.html
+++ b/AV/Development/SelfOrgMove-to-FrontPro.html
@@ -200,7 +200,7 @@ Written by Junyang Chen and Cliff Shaffer
 
   function f_moveUp() {
     if (selected_node){
-      selected_node.edgeToNext().clear();
+      selected_node.edgeToNext().hide();
       var prev = findSelectedPrev(selected_node);
       prev.edgeToNext().hide();
       var xyPosition = selected_node.position().top - 30;
@@ -425,7 +425,7 @@ function findSelectedPrev(selected){
         Your task in this exercise is to show the behavior for self organizing lists using the move to front method. You will need to 
         demonstrate what happens when you search for the
        <b><var>search_value</var></b>. 
-        you will need to manually rederect the poiters of the nedes 
+        You will need to manually rederect the poiters of the nodes 
         to demenstrate what happens when a node that is being searched is found.
       </p>
       <div class="question">
