More minor changes.

--- a/Exercises/Development/SelfOrgCounterPro.html
+++ b/Exercises/Development/SelfOrgCounterPro.html
@@ -532,7 +532,7 @@ function findCounterIndex(selected){
       <div id = "yy"></div>
       <p class="problem" id = "test">
         Your task in this exercise is to show the behavior for self organizing lists using the Counter. You will need to 
-        demonstrate what happens when you search for the 
+        demonstrate what happens when you search for the value
        <b><var>search_value</var></b>. 
         You will need to manually redirect the pointers of the nodes 
         to demonstrate what happens when a node that is being searched for is found.
