--- a/Exercises/Development/SelfOrgMove-to-FrontPro.html
+++ b/Exercises/Development/SelfOrgMove-to-FrontPro.html
@@ -427,7 +427,7 @@ function findSelectedPrev(selected){
       <div id = "yy"></div>
       <p class="problem" id = "test">
         Your task in this exercise is to show the behavior for self organizing lists using the move to front method. You will need to 
-        demonstrate what happens when you search for the
+        demonstrate what happens when you search for the value
        <b><var>search_value</var></b>. 
         You will need to manually redirect the pointers of the nodes 
         to demonstrate what happens when a node that is being searched is found.
