Completed cleanup of ListArray module

--- a/Exercises/List/ArryLstMCQsucc.html
+++ b/Exercises/List/ArryLstMCQsucc.html
@@ -20,6 +20,10 @@
 	<li><var>"none of these"</var></li>	  	 
       </ul>
       <div class="hints">
+        <p>The list elements are stored in an array.</p>
+        <p>Where in the array should they go?</p>
+        <p>The list element in list position <code>i</code> will be
+          stored in array position <code>i</code>.</p>
       </div>
     </div> 
   </div>
