--- a/Exercises/List/ArryLstTFpred.html
+++ b/Exercises/List/ArryLstTFpred.html
@@ -21,6 +21,7 @@
 	<li><var>"False"</var></li>			  	  	 
       </ul>
       <div class="hints">
+        <p>Is it possible to go backwards? If not, what can we do intead?</p>
       </div>
     </div>
   </div>
