--- a/Exercises/List/ArryLstMCQdelarb.html
+++ b/Exercises/List/ArryLstMCQdelarb.html
@@ -21,6 +21,11 @@
 	<li><var><code>\Theta(n \log n)</code> time</var> </li>	  	 
       </ul>
       <div class="hints">
+        <p>Position <code>i</code> could be anywhere in the list.</p>
+	<p>We will need to shift values from position <code>i</code> to
+          the list end back by one position.</p>
+        <p>How many we shift depends on the value of <code>i</code>.</p>
+        <p>On average, it will be half the elements in the list.</p>
       </div>
     </div> 
   </div>
