--- a/Exercises/List/ArryLstMCQdelcurr.html
+++ b/Exercises/List/ArryLstMCQdelcurr.html
@@ -20,8 +20,13 @@
 	<li><var><code>\Theta(\log n)</code>  time</var> </li>
 	<li><var><code>\Theta(n \log n)</code>  time</var></li>	  	 
       </ul>
-	  <div class="hints">
-	   </div>
+      <div class="hints">
+        <p>The current position could be anywhere in the list.</p>
+	<p>We will need to shift values from the current position to
+          the list end back by one position.</p>
+        <p>How many we shift depends on the current position.</p>
+        <p>On average, it will be half the elements in the list.</p>
+      </div>
     </div> 
 
   </div>
