--- a/Exercises/List/ArryLstMCQinscurr.html
+++ b/Exercises/List/ArryLstMCQinscurr.html
@@ -21,6 +21,11 @@
 	<li><var><code>\Theta(n \log n)</code> time</var></li>	  	 
       </ul>
       <div class="hints">
+        <p>The current position could be anywhere in the list.</p>
+	<p>We will need to shift values from the current position to
+          the list end forward by one position.</p>
+        <p>How many we shift depends on the current position.</p>
+        <p>On average, it will be half the elements in the list.</p>
       </div>
     </div> 
   </div>
