--- a/Exercises/List/ArryLstSumm.html
+++ b/Exercises/List/ArryLstSumm.html
@@ -7,11 +7,11 @@
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
 </head>
 <body>
-  <div class="exercise" data-name="ArryLstTFpred"></div>
-  <div class="exercise" data-name="ArryLstMCQsucc"></div>
-  <div class="exercise" data-name="ArryLstMCQinscurr"></div>
-  <div class="exercise" data-name="ArryLstMCQinsarb"></div>
+  <div class="exercise" data-name="ArryLstMCQdelarb"></div>
   <div class="exercise" data-name="ArryLstMCQdelcurr"></div>
   <div class="exercise" data-name="ArryLstMCQinsarb"></div>
+  <div class="exercise" data-name="ArryLstMCQinscurr"></div>
+  <div class="exercise" data-name="ArryLstMCQsucc"></div>
+  <div class="exercise" data-name="ArryLstTFpred"></div>
 </body>
 </html>
