--- a/Exercises/Development/SelfOrgCounterPro.html
+++ b/Exercises/Development/SelfOrgCounterPro.html
@@ -1,6 +1,6 @@
 <!--
-Self Organizing Lists Move to Front mini-proficiency exercise.
-Written by Junyang Chen and Cliff Shaffer
+Self Organizing Lists Counter mini-proficiency exercise.
+Written by Pavel Hovhannisyan and Cliff Shaffer
 -->
 
 <!DOCTYPE html>
@@ -93,8 +93,8 @@ Written by Junyang Chen and Cliff Shaffer
     if(obj1 == obj2){ return;}
     var fx = $('#' + obj1.id()).position().left + 37 + 2;
     var tx = $('#' + obj2.id()).position().left  +2;
-    var fy = $('#' + obj1.id()).position().top + 15 + 1 + 40;
-    var ty = $('#' + obj2.id()).position().top + 15 +1 + 40;
+    var fy = $('#' + obj1.id()).position().top + 15 + 1 + 54;
+    var ty = $('#' + obj2.id()).position().top + 15 +1 + 54;
     var fx1 = fx, fy1 = fy, tx1 = tx, ty1 = ty;
 
     var disx = (fx - tx - 22) > 0 ? 1 : (fx - tx - 22) == 0 ? 0 : -1;
@@ -188,10 +188,8 @@ Written by Junyang Chen and Cliff Shaffer
         selected_node = this;
         status = 1;
       }else if(status == 1){
-       // this.value(selected_node.value());
 
         selected_node.removeClass('bgColor');
-       // jsav.effects.copyValue(selected_node, this);
         selected_node = null;
         status = 0;
       }else if(status == 2){
@@ -206,126 +204,6 @@ Written by Junyang Chen and Cliff Shaffer
       userInput = true;
     }
   }
-
-
-
-/////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////
-/*
-  function f_moveUp() {
-    if (selected_node){
-      var counterIndex = findCounterIndex(selected_node);
-      selected_node.edgeToNext().hide();
-      var prev = findSelectedPrev(selected_node);
-      prev.edgeToNext().hide();
-      var xyPosition = selected_node.position().top - 30;
-      selected_node.css({
-        top: xyPosition,
-      });
-
-      var xyPosition2 = jsavCounterArray[counterIndex].position().top - 30;
-      jsavCounterArray[counterIndex].css({
-        top: xyPosition2,
-      });
-    }  
-  }
-
-    function f_moveDown() {
-      if (selected_node){
-        var counterIndex = findCounterIndex(selected_node);
-        selected_node.edgeToNext().hide();
-        var prev = findSelectedPrev(selected_node);
-        prev.edgeToNext().hide();
-        var xyPosition = selected_node.position().top + 30;
-        selected_node.css({
-          top: xyPosition,
-        });
-
-        var xyPosition2 = jsavCounterArray[counterIndex].position().top + 30;
-        jsavCounterArray[counterIndex].css({
-          top: xyPosition2,
-        });
-
-
-      }
-    }
-
-
-      function f_moveRight() {
-        if (selected_node){
-          var counterIndex = findCounterIndex(selected_node);
-          selected_node.edgeToNext().hide();
-          var prev = findSelectedPrev(selected_node);
-          prev.edgeToNext().hide();
-
-          var xyPosition = selected_node.position().left + 37;
-          selected_node.css({
-            left: xyPosition,
-          });
-          var xyPosition2 = jsavCounterArray[counterIndex].position().left + 37;
-          jsavCounterArray[counterIndex].css({
-            left: xyPosition2,
-          });
-        }
-      }
-
-
-      function f_moveLeft() {
-        if (selected_node){
-          var counterIndex = findCounterIndex(selected_node);
-          selected_node.edgeToNext().hide();
-          var prev = findSelectedPrev(selected_node);
-          prev.edgeToNext().hide();
-
-          var xyPosition = selected_node.position().left - 37;
-          selected_node.css({
-            left: xyPosition,
-          });
-          var xyPosition2 = jsavCounterArray[counterIndex].position().left - 37;
-          jsavCounterArray[counterIndex].css({
-            left: xyPosition2,
-          });
-        }
-      }
-
-
-//finds the previous node
-function findSelectedPrev(selected){
-    var curr = exe_head;
-    var prev = exe_head;
-
-    if (curr.exe_next && curr!=selected){
-      curr = curr.exe_next;
-    }
-
-    while(curr.exe_next && curr!=selected){
-        curr = curr.exe_next;
-        prev = prev.exe_next;
-    }
-    return prev;
-}
-
-//finds the previous node
-function findCounterIndex(selected){
-    var index = 0;
-    var curr = exe_head;
-
-    while(curr.exe_next && curr!=selected){
-        curr = curr.exe_next;
-        index++;
-    }
-    index--;
-    return index;
-}
-
-*/
-
-
-///////////////////////////////////////////////////
-////////////////////////////////////////////////////
-
-
-
 
 
   function addTail(node){
@@ -475,13 +353,6 @@ function findCounterIndex(selected){
     $("#reset").click(function () { f_reset(); });
     $("#increaseCount").click(function () { f_increaseCount(); });
 
-    /*
-    $("#MoveUp").click(function () { f_moveUp(); });
-    $("#MoveDown").click(function () { f_moveDown(); });
-    $("#MoveLeft").click(function () { f_moveLeft(); });
-    $("#MoveRight").click(function () { f_moveRight(); });
-    */
-
   }
 
   // Check user's answer for correctness: User's array must match answer
@@ -489,11 +360,8 @@ function findCounterIndex(selected){
     var i = 0;
     var curr = exe_head;
     while(curr.exe_next){
-    //  console.log(jsavCounterArray[i].text());
-
 
       /*check if counter incrementation is done correctly*/
-      
       if(i<counterArr.length)
       if (counterArr[i]!=parseInt(jsavCounterArray[i].text())){
         return false;
