More work on linked lists

--- a/Exercises/List/ListOverhead.html
+++ b/Exercises/List/ListOverhead.html
@@ -1,3 +1,4 @@
+<!-- Written by Cliff Shaffer -->
 <!DOCTYPE html>
 <html data-require="math">
 <head>
@@ -41,21 +42,16 @@
         <p class="solution" data-type="text"><var>ANS</var></p>
 
         <div class="hints">
-           <p>
-              The overhead is <var>P</var> and the total space needed
-              is <var>SUM</var>.
-           </p>
-           <p>As the array fills up, its overhead decreases.</p>
-           <p>The pointer space (<var>P</var> bytes) is overhead.</p>
-           <p>
-             The bigger the overhead fraction, the less the array needs
+          <p>The overhead is <var>P</var> and the total space needed
+            is <var>SUM</var>.</p>
+          <p>As the array fills up, its overhead decreases.</p>
+          <p>The pointer space (<var>P</var> bytes) is overhead.</p>
+          <p>The bigger the overhead fraction, the less the array needs
              to be better. The bigger the data field, the more the array needs
-             to be better.
-           </p>
-           <p>The break-even point is at <var>D</var>/<var>SUM</var>.</p>
-           <p>If you have values like 4/8, reduce to 1/2.</p>
+             to be better.</p>
+          <p>The break-even point is at <var>D</var>/<var>SUM</var>.</p>
+          <p>If you have values like 4/8, reduce to 1/2.</p>
         </div>
-
       </div>
     </div>
   </div>
