Update array-based stack AVs and exercises

--- a/Exercises/List/alistInsertPRO.html
+++ b/Exercises/List/alistInsertPRO.html
@@ -16,10 +16,9 @@ Written by Junyang Chen and Cliff Shaffer
   <script src="alistInsertPRO.js"></script>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="alistPRO.css" type="text/css" />
-
 </head>
-<body>
 
+<body>
 <div class="exercise">
   <div class="vars">
     <var id="arr_size">randRange(4, 6)</var>
@@ -32,7 +31,8 @@ Written by Junyang Chen and Cliff Shaffer
     <div> <!-- Supresses answer box -->
       <p class="problem">Your task in this exercise is to show the
         behavior for array-based list insertion.
-        In the array displayed below, the "current" position is <b><var>insert_pos</var></b>.</p>
+        In the array displayed below, the "current" position is
+        <b><var>insert_pos</var></b>.</p> 
       <div class="question">
         <p>The value to insert is  <b><var>insert_value</var></b>,
 	  and it is to be inserted into the "current" position.</p>
