--- a/AV/Development/BinaryPointerTreeTest.html
+++ b/AV/Development/BinaryPointerTreeTest.html
@@ -17,16 +17,13 @@
   <script src="../../JSAV/extras/AVLextension.js"></script>
   <script src="BinaryPointerTree.js"></script>
 
-  <!--
   <style>
     .jsavnullnode {
       opacity: 0.2;
       background-color: #f00;
-      border-radius: 0;
       border: 1px solid #000;
     }
   </style>
-  -->
 </head>
 
 <body>
@@ -41,7 +38,8 @@
     var bpt = new av.ds.binarypointertree({center: true});
 
     bpt.root(7);
-    bpt.root().left(3).left(2).parent().right(5);
+    bpt.root().left(3).left(2);
+    bpt.root().left().right(5);
     bpt.root().right(10).right(12).right(15);
     bpt.layout();
 
@@ -78,7 +76,7 @@
     });
 
 
-    function inline(tree) {
+    function inorder(tree) {
       var stack = [];
       var result = "";
 
@@ -95,6 +93,29 @@
         result += node.value() + " ";
       }
       console.log(result);
+    }
+
+    function treeInfo() {
+      var stack = [];
+
+      stack.push(bpt.root());
+
+      while (stack[0]) {
+        var node = stack.shift();
+        if (node.left()) {
+          stack.push(node.left());
+        }
+        if (node.right()) {
+          stack.push(node.right());
+        }
+        var str = node.value() + ":\n  parents: " + $.map(node.parentnodes, function (n) { if (n) { return n.value() } }).join(", ");
+
+        if (node.edgeToParent() && node.edgeToParent().end()) {
+          str += "\n  edgeToParent.end: " + node.edgeToParent().end().value();
+        }
+
+        console.log(str);
+      }
     }
 
     var $b1 = $("<input type='button' value='layout'></button>").click(function(){bpt.layout();});
