--- a/AV/Development/rotationPRO.html
+++ b/AV/Development/rotationPRO.html
@@ -11,6 +11,17 @@
   <style type="text/css">
     #layoutButton {
       z-index: 500;
+      position: absolute;
+      top: 0px;
+      left: 50px;
+      width: 130px;
+    }
+    #nullButton {
+      z-index: 500;
+      position: absolute;
+      top: 25px;
+      left: 50px;
+      width: 130px;
     }
   </style>
 </head>
@@ -22,6 +33,10 @@
     <p class="instructions"></p>
     <p align="center" class="jsavexercisecontrols"></p>
     <p class="jsavoutput jsavline"></p>
+    <div class="jsavcanvas">
+      <button id='layoutButton'>Redraw tree</button>
+      <button id='nullButton' disabled='disabled'>Set pointer to null</button>
+    </div>
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -29,7 +44,6 @@
   <script src="../../JSAV/lib/jquery.transit.js"></script>
   <script src="../../JSAV/lib/raphael.js"></script>
   <script src="../../JSAV/build/JSAV.js"></script>
-  <script src="../../JSAV/extras/stack.js"></script>
   <script src="../../JSAV/extras/AVLextension.js"></script>
   <script src="../../lib/odsaUtils.js"></script>
   <script src="../../lib/odsaAV-min.js"></script>
